--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^2.6.11",
+    "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
